changed docker compose

--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,6 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>homebank-app</finalName>
     </build>
 </project>
