--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,12 @@ services:
     container_name: app-homebank
     ports:
       - "8080:8080"
-
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3307/homebank
+      SPRING_DATASOURCE_USERNAME: radu_baciu
+      SPRING_DATASOURCE_PASSWORD: admin
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+#    depends_on: db
   db:
     image: mysql
     container_name: homebank
