--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3307/homebank
+      SPRING_DATASOURCE_URL: jdbc:mysql://db/homebank
       SPRING_DATASOURCE_USERNAME: radu_baciu
       SPRING_DATASOURCE_PASSWORD: admin
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
@@ -20,3 +20,4 @@ services:
       MYSQL_USER: radu_baciu
       MYSQL_PASSWORD: admin
       MYSQL_DATABASE: homebank
+
