--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto: update
-spring.datasource.url: jdbc:mysql://localhost:3307/homebank
+spring.datasource.url: jdbc:mysql://db/homebank
 spring.datasource.username: radu_baciu
 spring.datasource.password: admin
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
